--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:latest 
 
-WORKDIR /app
+WORKDIR /app/
 
 ENV FLASK_DEBUG true 
 
@@ -8,6 +8,12 @@ EXPOSE 5000
 
 RUN apt-get update && apt-get install -y python3-flask git
 
-COPY ./src /app/
+COPY requirements.txt .
+
+RUN pip install --requirement ./requirements.txt
+
+WORKDIR /app/src
+
+COPY ./src .
 
 CMD flask run -h 0.0.0.0
