fix docker file"

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -6,14 +6,14 @@ ENV FLASK_DEBUG true
 
 EXPOSE 5000
 
-RUN apt-get update && apt-get install -y python3-flask git
+RUN apt-get update && apt-get install -y python3-flask git python3-pip
 
 COPY requirements.txt .
 
-RUN pip install --requirement ./requirements.txt
+RUN pip3 install --requirement ./requirements.txt
+
+COPY ./src ./src
 
 WORKDIR /app/src
-
-COPY ./src .
 
 CMD flask run -h 0.0.0.0
