--- a/web/src/package.json
+++ b/web/src/package.json
@@ -11,13 +11,16 @@
     "babel-install": "^2.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "jade": "^1.11.0",
     "morgan": "~1.9.1",
+    "mustache": "^4.0.1",
+    "mustache-express": "^1.3.0",
     "pug": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "template": "^0.17.5",
     "webpack": "^4.44.2"
   },
   "devDependencies": {
