--- a/web/src/package.json
+++ b/web/src/package.json
@@ -10,6 +10,7 @@
     "babel-cli": "^6.26.0",
     "babel-install": "^2.1.0",
     "cookie-parser": "~1.4.4",
+    "css-loader": "^4.3.0",
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
@@ -20,6 +21,7 @@
     "pug": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "style-loader": "^1.3.0",
     "template": "^0.17.5",
     "webpack": "^4.44.2"
   },
@@ -27,6 +29,7 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
-    "babel-loader": "^8.1.0"
+    "babel-loader": "^8.1.0",
+    "url-loader": "^4.1.0"
   }
 }
