--- a/web/src/package.json
+++ b/web/src/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "amqplib": "^0.6.0",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-install": "^2.1.0",
