--- a/web/src/package.json
+++ b/web/src/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "jade": "^1.11.0",
+    "mongodb": "^3.6.2",
     "morgan": "~1.9.1",
     "mustache": "^4.0.1",
     "mustache-express": "^1.3.0",
