--- a/web/src/package.json
+++ b/web/src/package.json
@@ -23,15 +23,18 @@
     "pug": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "socket.io": "^2.3.0",
     "style-loader": "^1.3.0",
     "template": "^0.17.5",
-    "webpack": "^4.44.2"
+    "webpack": "^4.44.2",
+    "websocket": "^1.0.32"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "socket.io-client": "^2.3.1",
     "url-loader": "^4.1.0"
   }
 }
